<resources>
    <string name="app_name">Summasphere</string>
    <string name="btn_summarize">Summarize</string>
    <string name="btn_login">Login</string>
    <string name="btn_copy_text">Copy Text</string>
    <string name="btn_signup">Sign up Free</string>
    <string name="btn_google">Continue with Google</string>
    <string name="onboarding_viewpager">Onboarding viewpager</string>
    <string name="introduce_in_home">Enjoy the ease and efficiency of gaining important insights with Summasphere</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_history_date">May 01, 2024 20:00</string>
    <string name="tv_history_title_summarizer">Summarizer</string>
    <string name="tv_history_description">History description</string>
    <string name="tv_title_onboarding_1">Increase Your Productivity</string>
    <string name="tv_description_onboarding_1"> Instantly summarize and analyze your text, URLs, and document to gain powerful insights without any hassle.</string>
    <string name="tv_title_onboarding_2">Diverse Input Formats and Zero Typing</string>
    <string name="tv_description_onboarding_2"> Summasphere seamlessly processes your text, URLs, and document without the need for any manual prompting, simplifying your analysis process.</string>
    <string name="tv_title_onboarding_3">Advanced Analysis and Data Visualization</string>
    <string name="tv_description_onboarding_3">Visualize the insights with ease using Summasphere\'s word cloud and topic distribution graph, providing you with clear and detailed descriptions for better understanding.</string>
    <string name="iv_logo">Summasphere Logo</string>
    <string name="default_web_client_id" translatable="false">579138698197-92am5np96brof03gdhe43dtq28k2qpvk.apps.googleusercontent.com</string>
    <string name="input_email_login">Email</string>
    <string name="input_password_login">Password</string>
    <string name="btn_input_login">Login</string>
    <string name="btn_download_pdf">Download PDF</string>
    <string name="btn_login_google">Login with Google</string>
    <string name="tv_forgot_password">Forgot Password</string>
    <string name="logo_summasphere">Logo Summasphere</string>
    <string name="divider_or">or</string>
    <string name="tv_termsofuse">Terms of use</string>
    <string name="tv_privacypolicy">Privacy policy</string>
    <string name="footer_divider">|</string>
    <string name="tv_welcome">Welcome</string>
    <string name="tv_back">back</string>
    <string name="tv_dont_have_account">Don\'t have an account?</string>
    <string name="tv_signup">Sign up</string>
    <string name="tv_login_logo">Summasphere logo</string>
    <string name="back_btn">Back</string>
    <string name="tv_history">History</string>
    <string name="tv_summarizer_result">Summarizer Result</string>
    <string name="btn_delete">Delete</string>
    <string name="search_text">Search</string>
    <string name="tv_create_your">Create your</string>
    <string name="tv_account">account</string>
    <string name="tv_have_account">Already have an account?</string>
    <string name="tv_login">Login</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_confirm_password">Confirm password</string>
    <string name="email_required">Required</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="password_required">Required</string>
    <string name="invalid_password">Password must be 8 to 10 characters</string>
    <string name="confirm_password_required">Required</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="input_error">Incorrect email or password, please try again</string>
    <string name="fill_all_fields">Please fill in all required fields</string>
    <string name="btn_summarized_text">Summarized Text</string>
    <string name="btn_original_text">Original Text</string>
    <string name="tv_home">Home</string>
    <string name="tv_profile">Profile</string>
    <string name="tv_logout">Log out</string>
    <string name="iv_main">Documents illustration</string>
    <string name="tv_description_home">Enjoy the efficiency of Summasphere,\n your ultimate productivity solution!</string>
    <string name="btn_summarize_title">Summarizer</string>
    <string name="btn_summarize_subtitle">Summarize your text and documents instantly</string>
    <string name="btn_icon_summarize">Summarize icon with a light blue background</string>
    <string name="custom_btn_summarizer_img">Summarizer icon with light blue background</string>
    <string name="custom_btn_summarizer_title">Summarizer</string>
    <string name="custom_btn_summarizer_subtitle">Summarize your text and documents instantly</string>
    <string name="custom_btn_analyzer_img">Analyzer icon with light blue background</string>
    <string name="custom_btn_analyzer_title">Analyzer</string>
    <string name="custom_btn_analyzer_subtitle">Analyze your documents to uncover powerful insights</string>
    <string name="tv_description_home_2">Choose your preferred tools below to get started</string>
    <string name="iv_onboarding_logo">Summasphere logo</string>
    <string name="nohistory">No history icon</string>
    <string name="iv_user_profile">User profile icon</string>
    <string name="tv_profile_email">Email</string>
    <string name="tv_user_email">example@email.com</string>
    <string name="tv_profile_account">Account</string>
    <string name="iv_change_password">Change password icon</string>
    <string name="tv_change_password">Change Password</string>
    <string name="iv_profile_arrow">Arrow icon</string>
    <string name="iv_log_out">Log out icon</string>
    <string name="tv_log_out">Log out</string>
    <string name="tv_profile_rate">Help us be better</string>
    <string name="iv_rate">Rate us</string>
    <string name="tv_rate">Rate us</string>
    <string name="tv_privacy_policy">Privacy and Policy</string>
    <string name="iv_privacy_policy">Privacy and Policy icon</string>
    <string name="iv_terms_conditions">Terms and Conditions icon</string>
    <string name="tv_terms_conditions">Terms and Conditions</string>
    <string name="tv_help_support">Help and Support</string>
    <string name="iv_help_support">Help and Support icon</string>
    <string name="tv_profile_general">General</string>
    <string name="tv_analyzer">Analyzer</string>
    <string name="upload">Upload</string>
    <string name="input_your_url">Input Your URL…</string>
    <string name="tv_analyzer_result">Analyzer Result</string>
    <string name="btn_analyzer_text">Analyzed Text</string>
    <string name="tv_wordcloud">Most Frequently Used Words Identified by \n Word Clouds</string>
    <string name="tv_topics">Visualization of The Topics Distribution</string>
    <string name="btn_analyze">Analyze</string>
    <string name="custom_btn_upload_img">Upload file icon with blue stroke</string>
    <string name="custom_btn_upload_title">Tap to upload your file</string>
    <string name="custom_btn_upload_subtitle">Upload file in PDF, CSV, Txt format</string>
    <string name="input_url">Input the URL of the document or text</string>
    <string name="tv_summarizer">Summarizer</string>
    <string name="tv_summary_length">Summary Length</string>
    <string name="input_text">Input text to summarize</string>
    <string name="btn_clear_text">Clear text</string>
    <string name="summary_length_slider">"Summary length slider to determine the length of the summarized text "</string>
    <string name="tv_change_password_description">Change your password frequently to keep your account secure. Use a strong password for worry-free access.</string>
    <string name="input_change_password">New password</string>
    <string name="input_confirm_new_password">Confirm new password</string>
    <string name="btn_change_password">Change Password</string>
    <string name="iv_result_topics">Topics distribution</string>
    <string name="iv_result_wordcloud">Wordcloud</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_logout">Log out</string>
    <string name="dialog_logout_title">Are you sure to log out?</string>
</resources>