<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:id="@+id/title_login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="64dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_login_layout">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/tv_login_logo"
            android:src="@drawable/logo_summasphere" />

        <TextView
            android:id="@+id/tv_welcome"
            style="@style/TextStyle.TITLE_LOGIN_SIGNUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_welcome"/>

        <TextView
            android:id="@+id/tv_back"
            style="@style/TextStyle.TITLE_LOGIN_SIGNUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_back"
            android:layout_marginBottom="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dont_have_account"
                style="@style/TextStyle.LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_dont_have_account"/>

            <TextView
                android:id="@+id/tv_signup"
                style="@style/TextStyle.LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signup"
                android:layout_marginStart="4dp"
                android:textColor="@color/light_blue"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_login_layout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email_login_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintTextColor="@color/white_grey">

            <com.minervaai.summasphere.ui.customview.EmailInputEditText
                android:id="@+id/input_email_login"
                style="@style/TextStyle.INPUT"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                tools:ignore="TextContrastCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_login_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintTextColor="@color/white_grey">

            <com.minervaai.summasphere.ui.customview.PasswordInputEditText
                android:id="@+id/input_password_login"
                style="@style/TextStyle.INPUT"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/TextStyle.LABEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_forgot_password"
        android:textColor="@color/light_blue"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintTop_toBottomOf="@id/input_login_layout"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/TextStyle.BUTTON"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_primary"
        android:text="@string/btn_input_login"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/input_login_layout"
        app:layout_constraintBottom_toTopOf="@id/divider_login_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintButtonSize,TextContrastCheck"/>

    <LinearLayout
        android:id="@+id/divider_login_layout"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintBottom_toTopOf="@id/btn_login_google">

        <View
            android:id="@+id/line_divider_1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tv_or_divider"
            style="@style/TextStyle.LABEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divider_or"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <View
            android:id="@+id/line_divider_2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_google"
        style="@style/TextStyle.BUTTON"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/btn_login_google"
        android:textColor="@color/dark_blue"
        android:background="@drawable/btn_google"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_google"
        app:iconTint="@null"
        app:iconSize="24dp"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/divider_login_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:id="@+id/footer_login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_terms_of_use"
            style="@style/TextStyle.LABEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_termsofuse"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/footer_login_divider"
            style="@style/TextStyle.LABEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer_divider"/>

        <TextView
            android:id="@+id/tv_privacy_policy"
            style="@style/TextStyle.LABEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_privacypolicy"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>