<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupActivity"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:id="@+id/title_signup_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="64dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_signup_layout">

        <ImageView
            android:id="@+id/signup_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/tv_login_logo"
            android:src="@drawable/logo_summasphere" />

        <TextView
            android:id="@+id/tv_create_your"
            style="@style/TextStyle.TITLE_LOGIN_SIGNUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_create_your"/>

        <TextView
            android:id="@+id/tv_account"
            style="@style/TextStyle.TITLE_LOGIN_SIGNUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_account"
            android:layout_marginBottom="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_have_account"
                style="@style/TextStyle.LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_have_account"/>

            <TextView
                android:id="@+id/tv_login"
                style="@style/TextStyle.LABEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_login"
                android:layout_marginStart="4dp"
                android:textColor="@color/light_blue"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_signup_layout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email_signup_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintTextColor="@color/white_grey">

            <com.minervaai.summasphere.ui.customview.EmailInputEditText
                android:id="@+id/input_email_signup"
                style="@style/TextStyle.INPUT"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:textColor="@color/white"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                tools:ignore="TextContrastCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_signup_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintTextColor="@color/white_grey">

            <com.minervaai.summasphere.ui.customview.PasswordInputEditText
                android:id="@+id/input_password_signup"
                style="@style/TextStyle.INPUT"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:textColor="@color/white"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_confirm_password_signup_layout"
            style="@style/CustomTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintTextColor="@color/white_grey">

            <com.minervaai.summasphere.ui.customview.ConfirmPasswordInputEditText
                android:id="@+id/input_confirm_password_signup"
                style="@style/TextStyle.INPUT"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:textColor="@color/white"
                android:hint="@string/input_confirm_password"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        style="@style/TextStyle.BUTTON"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_primary"
        android:contentDescription="@string/btn_signup"
        android:text="@string/btn_signup"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/input_signup_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintButtonSize,TextContrastCheck"/>

    <LinearLayout
        android:id="@+id/footer_signup_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_terms_of_use"
            style="@style/TextStyle.LABEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_termsofuse"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/footer_signup_divider"
            style="@style/TextStyle.LABEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer_divider"/>

        <TextView
            android:id="@+id/tv_privacy_policy"
            style="@style/TextStyle.LABEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_privacypolicy"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/medium_blue"
        android:visibility="gone"
        app:indicatorColor="@color/medium_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>