<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/btn_bg_home"
    android:padding="20dp">

    <ImageView
        android:id="@+id/btn_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_summarize_home"
        android:contentDescription="@string/btn_icon_summarize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/btn_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/btn_summarize_title"
        style="@style/TextStyle.BUTTON_TITLE"
        app:layout_constraintStart_toEndOf="@id/btn_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_subtitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/btn_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/btn_summarize_subtitle"
        style="@style/TextStyle.BUTTON_SUBTITLE"
        app:layout_constraintStart_toEndOf="@id/btn_icon"
        app:layout_constraintTop_toBottomOf="@id/btn_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
