<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="16dp"
    android:background="@drawable/custom_bg_dialog">

    <TextView
        android:id="@+id/dialog_logout_title"
        style="@style/TextStyle.VALUE_DIALOG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/dialog_logout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            style="@style/TextStyle.BUTTON"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_secondary"
            android:text="@string/btn_logout"
            app:backgroundTint="@null"
            tools:ignore="VisualLintButtonSize,TextContrastCheck"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/TextStyle.BUTTON"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_primary"
            android:text="@string/btn_cancel"
            app:backgroundTint="@null"
            tools:ignore="VisualLintButtonSize,TextContrastCheck"/>
    </LinearLayout>
</LinearLayout>
