<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_gradient_bg"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/iv_home_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/iv_logo"
        android:src="@drawable/onboarding_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/iv_main"
        android:src="@drawable/ic_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_home_logo"
        app:layout_constraintBottom_toTopOf="@id/tv_home_description"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_home_description"
        style="@style/TextStyle.VALUE"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_main"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="@color/white_grey"
        android:text="@string/tv_description_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_main"
        tools:ignore="TextContrastCheck" />

    <customb
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:titleText="Summarizer"
        app:subtitleText="Summarize your text and documents in an instant"
        app:iconDrawable="@drawable/ic_summarizer" />



</androidx.constraintlayout.widget.ConstraintLayout>